<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ff0000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:background="#990000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:background="#a9a9a9"
        android:text="@string/login"
        android:textSize="27sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:background="#ff0000" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#990000" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="240px"
        android:layout_height="65px"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/TextView01"
        android:ems="8" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="240px"
        android:layout_height="65px"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/editText1"
        android:inputType="textPassword"
        android:ems="8" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/EditText01"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="42dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="81dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView02"
        android:text="@string/register" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="账单" />

</RelativeLayout>